# dynamixel_7dof_arm

./: README.md
3d_print/: gripper_1.stl  gripper_4.stl  joint2_1.stl  joint2_2.stl
dynamixel_7dof_arm_description/: CMakeLists.txt  package.xml
dynamixel_7dof_arm_description/launch/: dynamixel_7dof_arm_rviz.launch  dynamixel_7dof_arm_upload.launch
dynamixel_7dof_arm_description/meshes/: finger_collision.stl  finger_visual.stl  gripper_collision.stl  gripper_visual.stl  link1_collision.stl  link1_visual.stl  link2_visual.stl  link3_collision.stl  link3_visual.stl  link4_visual.stl  link5_visual.stl  link6_collision.stl  link6_visual.stl  link7_visual.stl
dynamixel_7dof_arm_description/urdf/: dynamixel_7dof_arm.gazebo.xacro  dynamixel_7dof_arm.urdf.xacro  dynamixel_7dof_arm_robot.urdf.xacro
manipulator_description/: CMakeLists.txt  package.xml
manipulator_description/meshes/: finger.stl  gripper.stl  link2.stl  link4.stl  link5.stl  link6.stl  link7.stl
manipulator_description/urdf/: manipulator.gazebo.xacro  manipulator.transmission.xacro  manipulator.urdf.xacro  manipulator_robot.urdf.xacro
stl/: finger_1.stl  finger_2.stl  finger_part3.stl  gripper_2.stl  gripper_3.stl  gripper_horn.stl  gripper_part2.stl  gripper_rack.stl  horn.stl  link2_part1.stl  link3_1.stl  link3_2.stl  link5_part1.stl  link5_part2.stl
